# GPE-Updater-Client

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  Makefile  README.md
buildsrc/: updaterConfig.hpp.in
src/: cli.cpp  cli.hpp  filecheck.cpp  filecheck.hpp  main.cpp  servercheck.cpp  servercheck.hpp  updater.cpp  updater.hpp  updaterConfig.hpp
